fix: move away backface-visibility, not useful if applied to <body>
https://css-tricks.com/almanac/properties/b/backface-visibility/

https://stackoverflow.com/questions/15464055/css-transition-effect-makes-image-blurry-moves-image-1px-in-chrome

--- a/src/scss/typography/_typography-html-body.scss
+++ b/src/scss/typography/_typography-html-body.scss
@@ -67,13 +67,4 @@ body {
   word-wrap: break-word;
 
   background-color: $bf-white;
-
-  // 3D effects are problematic in WebKit because
-  // backface-visibility not hidden, so we can add backface support
-  // to the body element
-  // http://css-tricks.com/almanac/properties/b/backface-visibility/
-
-  // this is a not standard CSS property, so it's for webkit only
-  // https://developer.mozilla.org/en-US/docs/Web/CSS/-webkit-overflow-scrolling
-  backface-visibility: hidden;
 }
